--- a/main.html
+++ b/main.html
@@ -7,7 +7,10 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div> 
+		My current favourite song is [manasa manasa]
+		<a href = "https://www.youtube.com/watch?v=NtTGqvD67pE"></a>
+	</div><!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
 
